# picocalc-tracker

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
pico-tracker/: Cargo.toml  README.md  justfile
pico-tracker-types/: Cargo.toml  README.md
pico-tracker-types/src/: lib.rs
pico-tracker/.cargo/: config.toml
pico-tracker/src/: base_plugin.rs  embedded.rs  lib.rs  vreg.rs
pico-tracker/src/helpers/: less_then.rs
pico-tracker/src/midi_plugin/: mod.rs
src/: auto_transition.rs  base_plugin.rs  embedded.rs  lib.rs  main.rs  main.rs.bak
src/dungeon_gen/: grid_maker.rs  mod.rs  size_mod.rs
src/helpers/: less_then.rs  mod.rs
