[package]
name = "pico-tracker-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["alloc", "derive"], default-features = false }
bevy = { version = "0.16", default-features = false, features = [ "critical-section", "default_no_std" ] }
ron = { version = "0.10.1", default-features = false, git = "https://github.com/ron-rs/ron", rev = "27a26d6" }
